@@ -64,6 +64,7 @@
 		"actions/vstudio/vs2010_vcxproj.lua",
 		"actions/vstudio/vs2010_vcxproj_filters.lua",
 		"actions/vstudio/vs2012.lua",
+		"actions/vstudio/vs2013.lua",
 
 		-- Xcode action
 		"actions/xcode/_xcode.lua",
