@@ -79,8 +79,10 @@
 		_p(2,'<UseDebugLibraries>%s</UseDebugLibraries>', iif(optimisation(cfg) == "Disabled","true","false"))
 		_p(2,'<CharacterSet>%s</CharacterSet>',iif(cfg.flags.Unicode,"Unicode","MultiByte"))
 
-		if _ACTION > "vs2010" then
-			_p(2,'<PlatformToolset>%s</PlatformToolset>', "v110")
+		local toolsets = { vs2012 = "v110", vs2013 = "v120" }
+		local toolset = toolsets[_ACTION]
+		if toolset then
+			_p(2,'<PlatformToolset>%s</PlatformToolset>', toolset)
 		end
 
 		if cfg.flags.MFC then
